[Enhancement] Upgrade jackson due to CVE-2022-42003 (#31480)
Signed-off-by: Astralidea <astralidea@163.com>
(cherry picked from commit 17b37f5be6955dfab227cbdceff405ca863ce097)

--- a/fe/pom.xml
+++ b/fe/pom.xml
@@ -43,7 +43,7 @@ under the License.
         <maven.compiler.target>1.8</maven.compiler.target>
         <jprotobuf.version>2.4.12</jprotobuf.version>
         <log4j.version>2.19.0</log4j.version>
-        <jackson.version>2.13.4</jackson.version>
+        <jackson.version>2.15.2</jackson.version>
         <spark.version>3.4.0</spark.version>
         <tomcat.version>8.5.70</tomcat.version>
         <parquet.version>1.10.1</parquet.version>
@@ -250,7 +250,7 @@ under the License.
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson.version}.2</version>
+                <version>${jackson.version}</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-yaml -->
